[package]
name = "verse"
version = "0.0.22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
bevy-ui-navigation = "0.33.0" # Temporary Bevy 0.12 patch; TODO: Update
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_common_assets = { version = "0.8.0", features = ["ron"] }
bevy_fluent = "0.8.0"
bevy_rapier2d = "0.22.0" # Temporary Bevy 0.12 patch; TODO: Update
bevy_spatial = "0.7.0"
bevy_tiling_background = { git = "https://github.com/rparrett/bevy_tiling_background.git", branch = "tex-typo" }
fluent_content = "0.0.5"
image = "0.24.7"
leafwing-input-manager = "0.11.1"
rand = "0.8.5"
regex = "1.10.2"
ron = "0.8.1"
serde = "1.0.190"
unic-langid = { version = "0.9.1", features = ["macros"] }
winit = "0.28.7"

# Override dependencies to patched versions
[patch.crates-io]
bevy-ui-navigation = { git = "https://github.com/TristanCacqueray/ui-navigation.git", branch = "bevy-0.12" } # Temporary Bevy 0.12 patch; TODO: Update
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader.git", branch = "bevy_main" } # Temporary Bevy 0.12 patch; TODO: Update
bevy_fluent = { git = "https://github.com/kgv/bevy_fluent.git", branch = "debug" } # Temporary Bevy 0.12 patch; TODO: Update
bevy_rapier2d = { git = "https://github.com/devil-ira/bevy_rapier.git", branch = "bevy-0.12" } # Temporary Bevy 0.12 patch; TODO: Update
bevy_tiling_background = { git = "https://github.com/rparrett/bevy_tiling_background.git", branch = "tex-typo" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
