[package]
name = "verse"
version = "0.0.23"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
bevy-ui-navigation = "0.33.0"
bevy_asset_loader = { version = "0.18.0", features = ["2d"] }
bevy_common_assets = { version = "0.8.0", features = ["ron"] }
bevy_fluent = "0.8.0"
bevy_picking_core = "0.17.0"
bevy_rapier2d = "0.23.0"
bevy_spatial = "0.7.0"
fluent_content = "0.0.5"
image = "0.24.7"
leafwing-input-manager = "0.11.1"
rand = "0.8.5"
regex = "1.10.2"
ron = "0.8.1"
serde = "1.0.192"
unic-langid = { version = "0.9.1", features = ["macros"] }
winit = "0.28.7"

# Override dependencies to patched versions
[patch.crates-io]
bevy_fluent = { git = "https://github.com/kgv/bevy_fluent.git", branch = "main" } # Temporary Bevy 0.12 patch; TODO: Update

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
