[package]
name = "verse"
version = "0.0.28"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"
bevy-ui-navigation = "0.33.1"
bevy_asset_loader = { version = "0.18.0", features = ["2d"] }
bevy_common_assets = { version = "0.8.0", features = ["ron"] }
bevy_fluent = "0.8.0"
bevy_picking_core = "0.17.0" # Sub-dependency of bevy-ui-navigation; we need to access one of its components
bevy_rapier2d = "0.23.0"
bevy_spatial = "0.7.0"
fluent_content = "0.0.5"
image = "0.24.7"
leafwing-input-manager = "0.11.2"
rand = "0.8.5"
regex = "1.10.2"
ron = "0.8.1"
serde = "1.0.195"
unic-langid = { version = "0.9.1", features = ["macros"] }
winit = "0.28.7"

# Override dependencies to patched versions
# [patch.crates-io]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
